# research_copilot

./: .gitignore  GCP_DEPLOYMENT_TUTORIAL.md  GCP_QUICK_START.md  GITHUB_SETUP_GUIDE.md  README.md  app.py  cloudbuild.yaml  pyproject.toml  requirements.txt
config/: __init__.py  gcp_settings.py
deployment/: DEPLOY.md  Dockerfile  Dockerfile.gcp  cloud-run.yaml
research_copilot/: __init__.py
research_copilot/agents/: __init__.py  arxiv_agent.py  base_agent.py  github_agent.py  local_rag_agent.py  notion_agent.py  prompts.py  schemas.py  web_agent.py  youtube_agent.py
research_copilot/app/: __init__.py  main.py
research_copilot/config/: __init__.py  gcp_settings.py  settings.py
research_copilot/core/: chat_interface.py  document_manager.py  llm_utils.py  rag_system.py  study_plan_generator.py
research_copilot/db/: research_cache.py  vector_db_manager.py
research_copilot/notion/: __init__.py  notion_client.py  notion_renderer.py  notion_service.py  parsers.py  schemas.py  study_plan_generator.py  study_plan_prompts.py
research_copilot/orchestrator/: edges.py  graph.py  nodes.py  prompts.py  schemas.py  state.py  tools.py
research_copilot/rag/: __init__.py  chunker.py  chunking.py  evaluator.py  indexer.py  reranker.py  retriever.py  source_indexers.py
research_copilot/storage/: __init__.py  cloud_storage.py  parent_store.py  qdrant_client.py
research_copilot/tools/: arxiv_tools.py  base.py  github_tools.py  local_tools.py  notion_tools.py  registry.py  web_tools.py  youtube_tools.py
research_copilot/tools/mcp/: adapter.py  github_mcp.py  web_search_mcp.py
research_copilot/ui/: css.py  gradio_app.py  research_formatter.py
research_copilot/utils/: __init__.py  notion_formatter.py  pdf_converter.py
scripts/: deploy_gcp.sh  verify_imports.py
scripts/dev/: fix_config_imports.py  update_imports.py  verify_imports.py
scripts/evaluation/: evaluate_rag.py
tests/: __init__.py  conftest.py  test_base.py  test_mcp_adapter.py  test_mcp_integration.py  test_registry.py  test_research_cache.py
tests/agents/: test_agent_execution.py  test_agent_integration.py  test_agents.py
tests/integration/: test_integration.py
tests/manual/: test_agents_manual.py  test_mcp_implementation.py  test_mcp_manual.py  test_mcp_tools_discovery.py  test_orchestrator_manual.py  test_phase4_manual.py  test_tools_manual.py
tests/orchestrator/: test_orchestrator_integration.py
tests/rag/: test_rag_chunker.py  test_rag_evaluator.py  test_rag_indexer.py  test_rag_reranker.py  test_rag_retriever.py  test_rag_source_indexers.py
tests/tools/: test_arxiv_tools.py  test_github_tools.py  test_local_tools.py  test_web_tools.py  test_youtube_tools.py
